💄  Smooth scroll; Fix mobile design layout issues (Projects)

--- a/styles/scss/base/_media.scss
+++ b/styles/scss/base/_media.scss
@@ -15,3 +15,9 @@
         @content;
     }
 }
+
+@mixin uxsBreakpoint {
+    @media screen and (max-width: 400px) {
+        @content;
+    }
+}
