--- a/styles/scss/partials/_about.scss
+++ b/styles/scss/partials/_about.scss
@@ -1,4 +1,4 @@
-.about {
+#about {
     width: 80%;
     background-color: $gray;
     border: 1px solid $gray;
