--- a/styles/scss/partials/_navbar.scss
+++ b/styles/scss/partials/_navbar.scss
@@ -123,6 +123,7 @@
                                     font-weight: 500;
                                     color: #000000;
                                     text-decoration: none;
+                                    padding-right: .1rem;
 
                                     &.current {
                                         font-weight: bold;
