--- a/styles/scss/partials/_portfolio.scss
+++ b/styles/scss/partials/_portfolio.scss
@@ -1,4 +1,4 @@
-.portfolio {
+#portfolio {
     margin: 5rem auto;
 
     .portfolio__text-container {
@@ -56,6 +56,13 @@
                         height: 11.5rem;
                         border-radius: 10px;
                         object-fit: cover;
+
+                        @include uxsBreakpoint {
+                            width: 80vw;
+                            height: 18vh;
+                            margin: auto;
+                        }
+
                     }
 
                     .project__image-layer {
@@ -85,6 +92,11 @@
                             transition: 200ms ease-in-out;
                             cursor: pointer;
 
+                            @include uxsBreakpoint {
+                                width: 80vw;
+                                height: 18.4vh;
+                            }
+                            
                             span {
                                 display: flex;
                                 align-items: center;
@@ -140,6 +152,7 @@
 
                 span:last-of-type {
                     margin-top: .5rem;
+
                     a {
                         color: black;
                         font-weight: bold;
@@ -165,6 +178,10 @@
                     width: 80%;
                     margin-left: .5rem;
                     margin-top: 1rem;
+                    
+                    @include uxsBreakpoint {
+                        margin-left: 0;
+                    }
                 }
             }
         }
